--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script defer src="{{ url_for('static', filename='face-api.js') }}"></script>
+    <script defer src="{{ url_for('static', filename='face_modal.js') }}"></script>
     <script defer src="{{ url_for('static', filename='chat.js') }}"></script>
 </head>
 <body data-user-id="{{ current_user.id }}">
