--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -31,6 +31,7 @@
         </div>
 
         <div class="chat-messages" id="messageContainer">
+            <!-- Messages will be dynamically added here -->
         </div>
 
         <form class="message-form" id="messageForm">
